@@ -84,8 +84,9 @@ public class BucketService extends TaskResourceService {
 
     private static final Logger _log = LoggerFactory.getLogger(BucketService.class);
     private static final String EVENT_SERVICE_TYPE = "object";
-    private static final String SLASH ="/";
+    private static final String SLASH = "/";
     private static final String UNDER_SCORE = "_";
+    private static final String SPECIAL_CHAR_REGEX = "[^\\dA-Za-z\\_]";
 
     private BucketScheduler _bucketScheduler;
     private NameGenerator _nameGenerator;
@@ -154,7 +155,6 @@ public class BucketService extends TaskResourceService {
 
         // Check for all mandatory field
         ArgValidator.checkFieldNotNull(param.getLabel(), "name");
-        ArgValidator.checkFieldNotNull(param.getOwner(), "owner");
 
         Project project = _permissionsHelper.getObjectById(id, Project.class);
         ArgValidator.checkEntity(project, id, isIdEmbeddedInURL(id));
@@ -165,21 +165,9 @@ public class BucketService extends TaskResourceService {
         if (null == namespace || namespace.isEmpty()) {
             throw APIException.badRequests.objNoNamespaceForTenant(tenant.getId());
         }
-        StringBuilder bucketName = new StringBuilder();
-        StringBuilder bucketPath = new StringBuilder();
-        bucketName.append(namespace).append(UNDER_SCORE).append(project.getLabel()).append(UNDER_SCORE).append(param.getLabel());
-        bucketPath.append(namespace).append(SLASH).append(project.getLabel()).append(SLASH).append(param.getLabel());
-
-        // No need to generate any name -- Since the requirement is to use the customizing label we should use the same.
-        // Stripping out the special characters like ; /-+!@#$%^&())";:[]{}\ | but allow underscore character _
-        final String convertedName = bucketName.toString().replaceAll("[^\\dA-Za-z\\_]", "");
-        _log.info("Original name {} and converted name {}", bucketName, convertedName);
-        // There could be bucket with same name created with different projects/namespaces. Updating name to match this scenario.
-        param.setLabel(convertedName);
-        param.setPath(bucketPath.toString());
-
-        // Check if there already exist a bucket with same name.
-        checkForDuplicateName(param.getLabel(), Bucket.class, null, null, _dbClient);
+        
+        // Check if there already exist a bucket with same name in a Project.
+        checkForDuplicateName(param.getLabel().replaceAll(SPECIAL_CHAR_REGEX, ""), Bucket.class, id, "project", _dbClient);
 
         return initiateBucketCreation(param, project, tenant, null);
     }
@@ -194,9 +182,7 @@ public class BucketService extends TaskResourceService {
         Integer retention = Integer.valueOf(param.getRetention());
 
         // Hard Quota should be more than SoftQuota
-        if (softQuota >= hardQuota) {
-            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(param.getLabel());
-        }
+        verifyQuotaValues(softQuota, hardQuota, param.getLabel());
 
         // check varray
         VirtualArray neighborhood = _dbClient.queryObject(VirtualArray.class, param.getVarray());
@@ -218,7 +204,7 @@ public class BucketService extends TaskResourceService {
 
         VirtualPoolCapabilityValuesWrapper capabilities = new VirtualPoolCapabilityValuesWrapper();
 
-        capabilities.put(VirtualPoolCapabilityValuesWrapper.RESOURCE_COUNT, new Integer(1));
+        capabilities.put(VirtualPoolCapabilityValuesWrapper.RESOURCE_COUNT, Integer.valueOf(1));
         capabilities.put(VirtualPoolCapabilityValuesWrapper.THIN_PROVISIONING, Boolean.FALSE);
 
         List<BucketRecommendation> placement = _bucketScheduler.placeBucket(neighborhood, cos, capabilities);
@@ -231,7 +217,7 @@ public class BucketService extends TaskResourceService {
         BucketRecommendation recommendation = placement.get(0);
 
         String task = UUID.randomUUID().toString();
-        Bucket bucket = prepareBucket(param, project, tenant, neighborhood, cos, flags, recommendation, task);
+        Bucket bucket = prepareBucket(param, project, tenant, neighborhood, cos, flags, recommendation);
 
         _log.info(String.format(
                 "createBucket --- Bucket: %1$s, StoragePool: %2$s, StorageSystem: %3$s",
@@ -241,20 +227,12 @@ public class BucketService extends TaskResourceService {
                 task, ResourceOperationTypeEnum.CREATE_BUCKET);
         op.setDescription("Bucket Create");
 
-        try {
-            StorageSystem system = _dbClient.queryObject(StorageSystem.class, recommendation.getSourceStorageSystem());
-            ObjectController controller = getController(ObjectController.class, system.getSystemType());
-            controller.createBucket(recommendation.getSourceStorageSystem(), recommendation.getSourceStoragePool(), bucket.getId(),
-                    param.getLabel(), tenant.getNamespace(), param.getRetention(), param.getHardQuota(),
-                    param.getSoftQuota(), param.getOwner(), task);
-        } catch (InternalException e) {
-            bucket.setInactive(true);
-            _dbClient.persistObject(bucket);
-
-            // treating all controller exceptions as internal error for now. controller
-            // should discriminate between validation problems vs. internal errors
-            throw e;
-        }
+        // Controller invocation
+        StorageSystem system = _dbClient.queryObject(StorageSystem.class, recommendation.getSourceStorageSystem());
+        ObjectController controller = getController(ObjectController.class, system.getSystemType());
+        controller.createBucket(recommendation.getSourceStorageSystem(), recommendation.getSourceStoragePool(), bucket.getId(),
+                bucket.getName(), bucket.getNamespace(), bucket.getRetention(), bucket.getHardQuota(),
+                bucket.getSoftQuota(), bucket.getOwner(), task);
 
         auditOp(OperationTypeEnum.CREATE_BUCKET, true, AuditLogManager.AUDITOP_BEGIN,
                 param.getLabel(), param.getHardQuota(), neighborhood.getId().toString(),
@@ -363,21 +341,19 @@ public class BucketService extends TaskResourceService {
      * @param vpool
      * @param flags
      * @param placement
-     * @param token
      * @return
      */
     private Bucket prepareBucket(BucketParam param, Project project, TenantOrg tenantOrg,
-            VirtualArray neighborhood, VirtualPool vpool, DataObject.Flag[] flags, BucketRecommendation placement, String token) {
+            VirtualArray neighborhood, VirtualPool vpool, DataObject.Flag[] flags, BucketRecommendation placement) {
         _log.debug("Preparing Bucket creation for Param : {}", param);
         StoragePool pool = null;
         Bucket bucket = new Bucket();
         bucket.setId(URIUtil.createId(Bucket.class));
-        bucket.setLabel(param.getLabel());
-        bucket.setPath(param.getPath());
+        bucket.setLabel(param.getLabel().replaceAll(SPECIAL_CHAR_REGEX, ""));
         bucket.setHardQuota(SizeUtil.translateSize(param.getHardQuota()));
         bucket.setSoftQuota(SizeUtil.translateSize(param.getSoftQuota()));
         bucket.setRetention(Integer.valueOf(param.getRetention()));
-        bucket.setOwner(param.getOwner());
+        bucket.setOwner(getOwner(param.getOwner()));
         bucket.setNamespace(tenantOrg.getNamespace());
         bucket.setVirtualPool(param.getVpool());
         if (project != null) {
@@ -397,6 +373,15 @@ public class BucketService extends TaskResourceService {
         bucket.setStorageDevice(placement.getSourceStorageSystem());
         bucket.setPool(placement.getSourceStoragePool());
         bucket.setOpStatus(new OpStatusMap());
+
+        // Bucket name to be used at Storage System
+        String bucketName = project.getLabel() + UNDER_SCORE + param.getLabel();
+        bucket.setName(bucketName.replaceAll(SPECIAL_CHAR_REGEX, ""));
+
+        // Update Bucket path
+        StringBuilder bucketPath = new StringBuilder();
+        bucketPath.append(tenantOrg.getNamespace()).append(SLASH).append(project.getLabel()).append(SLASH).append(param.getLabel());
+        bucket.setPath(bucketPath.toString());
 
         if (flags != null) {
             bucket.addInternalFlags(flags);
@@ -439,9 +424,7 @@ public class BucketService extends TaskResourceService {
         }
 
         // Hard Quota should be more than SoftQuota
-        if (softQuota != 0 && hardQuota != 0 && softQuota >= hardQuota) {
-            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(bucket.getLabel());
-        }
+        verifyQuotaValues(softQuota, hardQuota, bucket.getLabel());
 
         // if no retention is provided, use the old value
         if (retention == 0) {
@@ -500,6 +483,15 @@ public class BucketService extends TaskResourceService {
         return resRepList;
     }
 
+    private String getOwner(String orgOwner) {
+        String owner = orgOwner;
+        if (null == orgOwner || orgOwner.isEmpty()) {
+            StorageOSUser user = getUserFromContext();
+            owner = user.getName();
+        }
+        return owner;
+    }
+
     /**
      * Get object specific permissions filter
      * 
@@ -508,5 +500,19 @@ public class BucketService extends TaskResourceService {
     public ResRepFilter<? extends RelatedResourceRep> getPermissionFilter(StorageOSUser user,
             PermissionsHelper permissionsHelper) {
         return new ProjOwnedResRepFilter(user, permissionsHelper, Bucket.class);
+    }
+
+    /**
+     * Hard Quota should be more than SoftQuota
+     * 
+     * @param softQuota Soft Quota value
+     * @param hardQuota Hard Quota value
+     * @param bucketName Bucket name
+     * @throws APIException If SoftQuota is more than HardQuota
+     */
+    private void verifyQuotaValues(Long softQuota, Long hardQuota, String bucketName) throws APIException {
+        if (softQuota < 0 || hardQuota < 0 || softQuota > hardQuota) {
+            throw APIException.badRequests.invalidQuotaRequestForObjectStorage(bucketName);
+        }
     }
 }
